--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 
 <h2>jonathanbatten's Git Achievements</h2>
-Unlocked 16/48 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 345 points<br>
+Unlocked 16/48 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 354 points<br>
 <ul>
 <li><div class="title">Apprentice Author (Level 1)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
 <li><div class="title">Apprentice Author (Level 2)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
@@ -60,6 +60,7 @@ Unlocked 16/48 <a href="http://github.com/icefox/git-achievements">Git Achieveme
 <li><div class="title">Master Author (Level 8)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
 <li><div class="title">Master Banker (Level 7)</div>  <div class="info">Join two or more development histories together with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-merge.html">git-merge</a>.</div></li>
 <li><div class="title">Master Blacksmith (Level 7)</div>  <div class="info">Created a branch using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-checkout.html">git-checkout</a> -b.</div></li>
+<li><div class="title">Master Blacksmith (Level 8)</div>  <div class="info">Created a branch using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-checkout.html">git-checkout</a> -b.</div></li>
 <li><div class="title">Master Butcher (Level 7)</div>  <div class="info">Performed an interactive rebase using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-rebase.html">git-rebase</a> -i.</div></li>
 <li><div class="title">Master Butcher (Level 8)</div>  <div class="info">Performed an interactive rebase using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-rebase.html">git-rebase</a> -i.</div></li>
 <li><div class="title">Master Product Manager (Level 7)</div>  <div class="info">Stash the changes in a dirty working directory away with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-stash.html">git-stash</a>.</div></li>
@@ -84,33 +85,39 @@ Unlocked 16/48 <a href="http://github.com/icefox/git-achievements">Git Achieveme
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
-   8406 symbolic-ref
-   8254 status
-   1156 checkout
-    745 add
-    599 push
-    562 rebase
-    376 pull
-    375 commit
-    208 merge
-    178 stash
-    155 branch
-     39 config
-     32 rm
-     32 fetch
+  11536 symbolic-ref
+  11524 status
+   1430 checkout
+    844 add
+    835 push
+    627 rebase
+    500 pull
+    486 commit
+    239 stash
+    210 merge
+    172 branch
+     61 fetch
+     59 config
+     42 rm
      21 achievements
      18 for-each-ref
+     15 reset
      13 bisect
-     11 reset
+     10 clone
+      7 tag
       6 mv
+      6 cherry-pick
       5 remote
-      5 clone
-      3 gui
-      2 show
+      4 revert
+      4 gui
+      3 show
+      2 Wed
       2 reflog
-      2 cherry-pick
-      1 Wed
+      2 log
+      1 Thu
       1 --help
+      1 gc
+      1 diff
 </pre>
 <script type="text/javascript">
 function showLocked() {
