--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 
 <h2>jonathanbatten's Git Achievements</h2>
-Unlocked 16/48 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 380 points<br>
+Unlocked 17/48 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 382 points<br>
 <ul>
 <li><div class="title">Apprentice Author (Level 1)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
 <li><div class="title">Apprentice Author (Level 2)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
@@ -24,6 +24,7 @@ Unlocked 16/48 <a href="http://github.com/icefox/git-achievements">Git Achieveme
 <li><div class="title">Apprentice Butcher (Level 2)</div>  <div class="info">Performed an interactive rebase using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-rebase.html">git-rebase</a> -i.</div></li>
 <li><div class="title">Apprentice Butcher (Level 3)</div>  <div class="info">Performed an interactive rebase using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-rebase.html">git-rebase</a> -i.</div></li>
 <li><div class="title">Apprentice Carpenter (Level 1)</div>  <div class="info">Custom <a href="http://www.kernel.org/pub/software/scm/git/docs/githooks.html">git-hooks</a> are installed which help catch issues before they are shared.</div></li>
+<li><div class="title">Apprentice Chimney Sweeper (Level 1)</div>  <div class="info">Used <a href="http://www.kernel.org/pub/software/scm/git/docs/git-gc.html">git-gc</a> to run a number of housekeeping tasks on the current repository.</div></li>
 <li><div class="title">Apprentice Collector (Level 1)</div>  <div class="info">Fetches named heads or tags from another repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-fetch.html">git-fetch</a></div></li>
 <li><div class="title">Apprentice Collector (Level 2)</div>  <div class="info">Fetches named heads or tags from another repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-fetch.html">git-fetch</a></div></li>
 <li><div class="title">Apprentice Collector (Level 3)</div>  <div class="info">Fetches named heads or tags from another repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-fetch.html">git-fetch</a></div></li>
@@ -88,21 +89,21 @@ Unlocked 16/48 <a href="http://github.com/icefox/git-achievements">Git Achieveme
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
-  12960 status
-  12937 symbolic-ref
-   1515 checkout
-    902 push
-    859 add
-    640 rebase
-    523 commit
-    522 pull
-    272 branch
-    256 stash
-    210 merge
-     71 fetch
+  13739 status
+  13679 symbolic-ref
+   1549 checkout
+    932 push
+    894 add
+    648 rebase
+    539 commit
+    538 pull
+    283 stash
+    278 branch
+    212 merge
+     75 fetch
      59 config
      42 rm
-     21 reset
+     22 reset
      21 achievements
      18 for-each-ref
      13 bisect
@@ -113,13 +114,13 @@ Git commands sorted by usage:
       6 mv
       6 gui
       5 remote
+      4 Wed
       4 revert
-      3 Wed
       3 show
       2 reflog
       2 log
-      1 --help
-      1 gc
+      2 --help
+      2 gc
       1 Fri
       1 diff
 </pre>
@@ -138,7 +139,6 @@ There are 48 Achievements. Some achievements can be leveled up depending on the 
 <li><div class="title">Baptised</div><div class="info">Set global user name using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-config.html">git-config</a>.</div></li>
 <li><div class="title">Beach Lion</div><div class="info">Restricted login shell for GIT-only SSH access with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-shell.html">git-shell</a></div></li>
 <li><div class="title">Caretaker</div><div class="info">Added a .gitignore file to a repository.</div></li>
-<li><div class="title">Chimney Sweeper</div><div class="info">Used <a href="http://www.kernel.org/pub/software/scm/git/docs/git-gc.html">git-gc</a> to run a number of housekeeping tasks on the current repository.</div></li>
 <li><div class="title">Cleaning lady</div><div class="info">Remove untracked files from the working tree with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-clean.html">git-clean</a></div></li>
 <li><div class="title">Delivery Boy</div><div class="info">Move objects and refs by archive with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-bundle.html">git-bundle</a>.</div></li>
 <li><div class="title">Dentist</div><div class="info">Extracted patches using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-log.html">git-log</a> -p.</div></li>
